# P2Bldg

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup_env.bat
.github/workflows/: run_tests.yml
data/input/: Example_battery_opt.xlsx  Example_building_opt.xlsx
data/output/logs/: run_Example_battery_opt.txt  run_Example_building_opt.txt
data/output/results/: Example_battery_opt.xlsx
data/resources/DHW_calc/: DHW_10HH_40LpP_DHW.txt  DHW_10HH_50LpP_DHW.txt  DHW_1HH_30LpP_DHW.txt  DHW_1HH_40LpP_DHW.txt  DHW_1HH_50LpP_DHW.txt  DHW_2HH_30LpP_DHW.txt  DHW_3HH_30LpP_DHW.txt  DHW_4HH_40LpP_DHW.txt  DHW_5HH_30LpP_DHW.txt  DHW_5HH_40LpP_DHW.txt  DHW_5HH_50LpP_DHW.txt  DHW_6HH_30LpP_DHW.txt  DHW_6HH_40LpP_DHW.txt  DHW_6HH_50LpP_DHW.txt  DHW_7HH_30LpP_DHW.txt  DHW_7HH_40LpP_DHW.txt  (+6 more)
docs/: conf.py  const.rst  index.rst  run_battery_opt.rst  run_building_opt.rst
src/: README.md  config.py  const.py  helper.py  run_battery_opt.bat  run_battery_opt.py  run_building_opt.bat  run_building_opt.py
src/data_preparation/: data_formats.py  demand_data.py  pvgis_climate_data.py  timeseries_reduction.py
src/export/: analysis_plots.py  excel_generator.py  export_results.py
src/model/: components.py  economics.py  pyomo_model.py
tests/: test_helper.py
tests/data_preparation/: test_data_formats.py  test_demand_data.py  test_pvgis_climate_data.py  test_timeseries_reduction.py
tests/export/: test_excel_generator.py  test_export_results.py  time_series_helper_tests.py
tests/model/: test_components.py  test_economics.py  test_pyomo_model.py
(+68 files in other folders)
