# toml
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "P2Bldg"
version = "1.0.0"
license = { file = "LICENSE", text = "GPL-3.0" }
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0.1,<3.0",
  "plotly>=5.13.0,<6.0",
  "numpy>=1.24.2,<2.0",
  "pvlib>=0.10.2,<1.0",
  "holidays>=0.17.0,<1.0",
  "matplotlib>=3.6.0,<4.0",
  "pyomo>=6.5.0,<7.0",
  "pysolar>=0.10.0,<1.0",
  "xlrd>=2.0.1,<3.0",
  "python-dateutil>=2.8.2,<3.0",
  "openpyxl>=3.1.2,<4.0",
  "xlsxwriter>=3.0.3,<4.0",
  "seaborn>=0.13.0,<1.0",
  "geopy>=2.3.0,<3.0",
]

[project.optional-dependencies]
docs = [
  "sphinx>=6.0.0,<7.0",
  "sphinx_rtd_theme>=1.2.0,<2.0",
  "myst-parser>=0.18.0,<1.0"
]
test = ["pytest>=7.2.0,<8.0"]
