# toml
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "P2Bldg"
version = "1.0.0"
license = { file = "LICENSE", text = "GPL-3.0" }
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "plotly",
  "numpy",
  "pvlib",
  "holidays",
  "matplotlib",
  "pyomo",
  "pysolar",
  "xlrd",
  "python-dateutil",
  "openpyxl",
  "xlsxwriter",
  "seaborn",
  "geopy",
  "highspy",
]

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "myst-parser"
]
test = ["pytest"]
